Implement validation for birthday to make sure the date is not future date
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -4,7 +4,9 @@
         <div ng-message="minlength">The field should contain at least 6 characters, please try again.</div>
         <div ng-message="maxlength">The field cannot contain more than 20 characters, please try again.</div>
         <div ng-message="compareTo">Your password and confirm password must match, please try again.</div>
-        <div ng-message="isValidPassword">Minimum 6 and Maximum 20 characters with at least One Uppercase Alphabet, One Lowercase Alphabet, One Number and One Special Character. (eg. abc#ABC1)</div>
+        <div ng-message="isValidPassword">Minimum 6 and Maximum 20 characters with at least One Uppercase Alphabet, One
+            Lowercase Alphabet, One Number and One Special Character. (eg. abc#ABC1)
+        </div>
     </script>
 
     <div class="col-sm-offset-1 col-sm-10">
