--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -36,7 +36,7 @@
                         <div class="row">
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" class="form-control" type="text"
-                                       ng-model="verificationVm.verifyInfo.verificationCode" required/>
+                                       placeholder="Verification Code " ng-model="verificationVm.verifyInfo.verificationCode" required/>
                                 <div class="text-alert" ng-messages="verificationForm.verificationCode.$error"
                                      ng-if="verificationForm.verificationCode.$dirty">
                                     <div ng-messages-include="verification-messages"></div>
