Change to use month name instead of number in date dropdown directive
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -14,7 +14,7 @@
                         <div class="col-xs-6">
                             <mhc-multi-select-date id="birthdate" name="birthdate"
                                                    ng-model="verificationVm.verifyInfo.birthdate"
-                                                   year-order="desc" start-year="1900" end-year=""
+                                                   year-order="desc" start-year="" end-year=""
                                                    mhc-check-before-today required ></mhc-multi-select-date>
                             <ul class="text-alert" ng-messages-multiple ng-if="verificationForm.$dirty"
                                 ng-messages="verificationForm.birthdate.$error">
