--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -1,7 +1,7 @@
 <div class="row">
     <script type="text/ng-template" id="verification-messages">
         <div ng-message="required">Please complete this required field.</div>
-        <div ng-message="isBeforeToday">Date of birth cannot be today's date, or a future date.</div>
+        <div ng-message="isAfterToday">Date of birth cannot be today's date, or a future date.</div>
     </script>
 
     <div class="col-sm-offset-1 col-sm-10">
@@ -15,7 +15,7 @@
                             <mhc-multi-select-date id="birthdate" name="birthdate"
                                                    ng-model="verificationVm.verifyInfo.birthdate"
                                                    year-order="desc" start-year="" end-year=""
-                                                   mhc-check-before-today required ></mhc-multi-select-date>
+                                                   mhc-check-after-today required ></mhc-multi-select-date>
                             <ul class="text-alert" ng-messages-multiple ng-if="verificationForm.$dirty"
                                 ng-messages="verificationForm.birthdate.$error">
                                 <li ng-message="dayRequired">Day is required</li>
