--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -15,7 +15,7 @@
                             <mhc-multi-select-date id="birthdate" name="birthdate"
                                                    ng-model="verificationVm.verifyInfo.birthdate"
                                                    year-order="desc" start-year="" end-year=""
-                                                   mhc-check-after-today required ></mhc-multi-select-date>
+                                                   mhc-check-after-today required></mhc-multi-select-date>
                             <ul class="text-alert" ng-messages-multiple ng-if="verificationForm.$dirty"
                                 ng-messages="verificationForm.birthdate.$error">
                                 <li ng-message="dayRequired">Day is required</li>
@@ -35,7 +35,8 @@
                         <div class="row">
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" class="form-control" type="text"
-                                       placeholder="Verification Code " ng-model="verificationVm.verifyInfo.verificationCode" required/>
+                                       placeholder="Verification Code "
+                                       ng-model="verificationVm.verifyInfo.verificationCode" required/>
                                 <div class="text-alert" ng-messages="verificationForm.verificationCode.$error"
                                      ng-if="verificationForm.verificationCode.$dirty">
                                     <div ng-messages-include="verification-messages"></div>
@@ -53,7 +54,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-12 m-t-sm">
-                        <button type="button" class="btn btn-default m-r-sm"
+                        <button type="reset" class="btn btn-default m-r-sm"
                                 ng-click="verificationVm.clearField(verificationForm)">Clear
                         </button>
                         <a class="btn btn-primary dark-green" ng-click="verificationVm.verify()"
