--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -13,9 +13,11 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <mhc-multi-select-date id="birthdate" name="birthdate"
-                                                   ng-model="verificationVm.verifyInfo.birthdate"
                                                    year-order="desc" start-year="" end-year=""
-                                                   mhc-check-after-today required></mhc-multi-select-date>
+                                                   ng-model="verificationVm.verifyInfo.birthdate"
+                                                   mhc-check-after-today required
+                                                   mhc-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
+                            </mhc-multi-select-date>
                             <div class="text-alert" ng-if="verificationForm.birthdate.$dirty"
                                  ng-messages="verificationForm.birthdate.$error">
                                 <span ng-messages-include="verification-messages"></span>
@@ -36,7 +38,6 @@
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" class="form-control" type="text"
                                        placeholder="Verification Code"
-                                       ng-focus="verificationVm.checkDateField(verificationForm.birthdate)"
                                        ng-model="verificationVm.verifyInfo.verificationCode" required/>
                                 <div class="text-alert" ng-messages="verificationForm.verificationCode.$error"
                                      ng-if="verificationForm.verificationCode.$dirty">
