Html and style changes to the Account Setup Verification page.
#8416 - As a patient, I can activate my account to login and access MHC [UI/API]

--- a/client/app/account/controllers/userAccountVerification.html
+++ b/client/app/account/controllers/userAccountVerification.html
@@ -31,7 +31,7 @@
                     <div class="alert alert-info">
                         To begin setting up your personal account, please enter your <b>Date of Birth</b> and the <b>Verification
                         Code</b> that was provided to you.
-                        Both fields are required in order to proceed.
+                        All fields are required in order to proceed.
                     </div>
                 </div>
             </div>
