Change validation message for date fields in verification page
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -23,7 +23,7 @@
                                 <span ng-messages-include="verification-messages"></span>
                             </div>
                             <div class="m-t-n-xs text-alert" ng-if="verificationVm.fillOutDate">
-                                <span>Please complete all required date field.</span>
+                                <span>Please complete all required fields to continue.</span>
                             </div>
                         </div>
                     </div>
