Change validation message for password fields in activation page
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -1,11 +1,9 @@
 <div class="row">
     <script type="text/ng-template" id="activation-messages">
         <div ng-message="required">Please complete this required field.</div>
-        <div ng-message="minlength">The field should contain at least 6 characters, please try again.</div>
-        <div ng-message="maxlength">The field cannot contain more than 20 characters, please try again.</div>
         <div ng-message="compareTo">Your password and confirm password must match, please try again.</div>
-        <div ng-message="isValidPassword">Minimum 6 and Maximum 20 characters with at least One Uppercase Alphabet, One
-            Lowercase Alphabet, One Number and One Special Character. (eg. abc#ABC1)
+        <div ng-message="isValidPassword">The password entered is not valid, see the Password Instructions and try
+            again.
         </div>
     </script>
 
@@ -30,8 +28,8 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <input id="password" type="password" class="form-control" name="password"
-                                   placeholder="Password" ng-minlength="6" ng-maxlength="20"
-                                   ng-model="createPasswordVm.patient.password" mhc-validate-password required>
+                                   placeholder="Password" ng-model="createPasswordVm.patient.password"
+                                   mhc-validate-password required>
                             <div ng-messages="createPasswordForm.password.$error"
                                  ng-if="createPasswordForm.password.$dirty" class="text-alert">
                                 <div ng-messages-include="activation-messages"></div>
@@ -44,8 +42,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <input id="reenterPassword" type="password" class="form-control" name="confirmPassword"
-                                   placeholder="Confirm password" ng-minlength="6" ng-maxlength="20"
-                                   ng-model="createPasswordVm.patient.confirmPassword"
+                                   placeholder="Confirm password" ng-model="createPasswordVm.patient.confirmPassword"
                                    mhc-compare-to="createPasswordVm.patient.password" required>
                             <div ng-messages="createPasswordForm.confirmPassword.$error"
                                  ng-if="createPasswordForm.confirmPassword.$dirty" class="text-alert">
