Add mhc popover directive
#8416: As a patient, I can activate my account to login and access MHC [UI/API]

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -24,7 +24,13 @@
                 </div>
 
                 <div class="form-group wrap">
-                    <label class="relative" for="password">Password</label>
+                    <label class="relative" for="password">Password
+                        <span class="text-strong-blue absolute" style="top: 0; right: -18px;">
+                            <span mhc-popover title="Password Instructions"
+                                  popoverdata="createPasswordVm.popoverData"
+                                  popover-placement="right"></span>
+                        </span>
+                    </label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="password" type="password" class="form-control relative" name="password"
