--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -24,18 +24,17 @@
                 </div>
 
                 <div class="form-group wrap">
-                    <label class="relative" for="password">Password
-                        <span class="text-strong-blue absolute" style="top: 0; right: -18px;">
-                            <span mhc-popover title="Password Instructions"
-                                  popoverdata="createPasswordVm.popoverData"
-                                  popover-placement="right"></span>
-                        </span>
-                    </label>
+                    <label class="relative" for="password">Password</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
                             <input id="password" type="password" class="form-control relative" name="password"
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
                                    mhc-validate-password required>
+                                <span class="text-strong-blue absolute" style="top: 5px; right: -2px;">
+                                    <span mhc-popover title="Password Instructions"
+                                          popoverdata="createPasswordVm.popoverData"
+                                          popover-placement="right"></span>
+                                </span>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.password.$dirty"
                                  ng-messages="createPasswordForm.password.$error">
                                 <div ng-messages-include="activation-messages"></div>
