Add popover title feature in mhcPopover directive
#8416: As a patient, I can activate my account to login and access MHC [UI/API]

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -31,9 +31,8 @@
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
                                    mhc-validate-password required>
                                 <span class="text-strong-blue absolute" style="top: 5px; right: -2px;">
-                                    <span mhc-popover title="Password Instructions"
-                                          popoverdata="createPasswordVm.popoverData"
-                                          popover-placement="right"></span>
+                                    <span mhc-popover popover-placement="right"
+                                          popoverdata="createPasswordVm.popoverData"></span>
                                 </span>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.password.$dirty"
                                  ng-messages="createPasswordForm.password.$error">
