Change error message when system sever is down
Bug #8596: Patient Registration :: Create Password :: Inappropriate Error Message Upon Valid Data Entry and Submit

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -58,7 +58,7 @@
 
                 <div class="row">
                     <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="createPasswordVm.activateError">
-                        <span>Whoops! Change message later.</span>
+                        <span>Whoops! Something went wrong. Please try again later.</span>
                     </div>
                 </div>
 
