--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -27,7 +27,7 @@
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
                                     <div class="m-t-sm">
-                                        <pp-oauth-login></pp-oauth-login>
+                                        <mhc-oauth-login></mhc-oauth-login>
                                     </div>
                                     <div class="text-center">
                                         <a href="#"><small>Forget Password?</small></a>
