Change pp to mhc prefix in directives in ppMedicalDocumentUpload and ppMedicalDocumentUploaded directives

--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,6 +1,6 @@
 <pp-content-wrapper contenttitle="Upload Medical Documents">
     <div class="row">
-        <pp-medical-documents-upload></pp-medical-documents-upload>
-        <pp-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></pp-uploaded-documents>
+        <mhc-medical-documents-upload></mhc-medical-documents-upload>
+        <mhc-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></mhc-uploaded-documents>
     </div>
 </pp-content-wrapper>
