--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -9,8 +9,8 @@
                 <div class="list-group">
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.edit()"><h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4></a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.downloadConsent('unsigned')" ><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
-                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.signConsent()"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setOption('tryMyPolicy')"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+                    <a href="#" class="list-group-item" ng-click="manageConsentModalVm.accept()"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Accept and Approve Consent</h4></a>
                     <a href="#" class="list-group-item" ng-click="manageConsentModalVm.setOption('delete')"><h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4></a>
                 </div>
             </div>
