Edits to HTML for Fedral/State Regulations categories - in progress.
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -47,7 +47,18 @@
                         <button class="btn btn-primary btn-xs m-r-xs dark-green" ng-click="medicalInfoModalVm.selectAllSensitivityPolicies(medicalInfofmationModalObj)">Select All</button>
                         <button class="btn btn-primary btn-xs dark-green" ng-click="medicalInfoModalVm.deselectAllSensitivityPolicies(medicalInfofmationModalObj)">Deselect All</button>
                         <div>
-                            <strong>Federal</strong>
+                            <!--<strong>Federal</strong>-->
+                            <!--<div class="border-bottom">-->
+                            <!--<span class="fa-stack">-->
+                                <!--<i class="fa fa-circle fa-stack-2x text-gray"></i>-->
+                                <!--<i class="fa fa-university fa-stack-1x fa-inverse"></i>-->
+                            <!--</span>-->
+                                <!--<em>Federal Regulations</em>-->
+                            <!--</div>-->
+                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue">
+                                <span class="fa fa-university m-r-xxs"></span>
+                                <em>Federal Categories</em>
+                            </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | filter: { federal: 'true' } | orderBy:'displayOrder'">
                                 <div>
                                     <div class="radio">
@@ -60,7 +71,18 @@
                             </div>
                         </div>
                         <div>
-                            <strong>State</strong>
+                            <!--<strong>State</strong>-->
+                            <!--<div class="border-bottom">-->
+                            <!--<span class="fa-stack">-->
+                                <!--<i class="fa fa-circle fa-stack-2x text-dark-blue"></i>-->
+                                <!--<i class="fa fa-flag fa-stack-1x fa-inverse"></i>-->
+                            <!--</span>-->
+                                <!--<em>State Regulations</em>-->
+                            <!--</div>-->
+                            <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue">
+                                <span class="fa fa-flag m-r-xxs"></span>
+                                <em>State Categories</em>
+                            </div>
                             <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | filter: { federal: 'false' } | orderBy:'displayOrder'">
                                 <div>
                                     <div class="radio">
