Implement the "i" information icons with descriptions
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -55,6 +55,10 @@
                                             <input type="checkbox" pp-icheck  checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies" checklist-value="sensitivityPolicy.code" >
                                             <span class="m-l-xs" ng-bind="sensitivityPolicy.displayName"></span>
                                         </label>
+                                        <span class="text-strong-blue">
+                                            <span mhc-popover popover-placement="right"
+                                                  popoverdata="sensitivityPolicy"></span>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -68,6 +72,10 @@
                                             <input type="checkbox" pp-icheck  checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies" checklist-value="sensitivityPolicy.code" >
                                             <span class="m-l-xs" ng-bind="sensitivityPolicy.displayName"></span>
                                         </label>
+                                        <span class="text-strong-blue">
+                                            <span mhc-popover popover-placement="right"
+                                                  popoverdata="sensitivityPolicy"></span>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
