Refactor mhcPopover directive
#8796 - As a Patient, I am able to distinguish between categories that are driven by Federal and State jurisdictional privacy policy rules

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -31,8 +31,9 @@
                                    placeholder="Password" ng-model="createPasswordVm.patient.password"
                                    mhc-validate-password required>
                                 <span class="text-strong-blue absolute" style="top: 5px; right: -2px;">
-                                    <span mhc-popover popover-placement="right"
-                                          popoverdata="createPasswordVm.popoverData"></span>
+                                    <mhc-popover popover-placement="right"
+                                                 popover-title="createPasswordVm.popoverData.title"
+                                                 popover-content="createPasswordVm.popoverData"></mhc-popover>
                                 </span>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.password.$dirty"
                                  ng-messages="createPasswordForm.password.$error">
