--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -17,13 +17,21 @@
                             the following areas of potentially sensitive
                             information.
                         </div>
-                        <button class="btn btn-primary btn-xs m-r-xs dark-green" ng-click="medicalInfoModalVm.selectAllMedicalSections(medicalInfofmationModalObj)">Select All</button>
-                        <button class="btn btn-primary btn-xs dark-green" ng-click="medicalInfoModalVm.deselectAllMedicalSections(medicalInfofmationModalObj)">Deselect All</button>
+                        <button class="btn btn-primary btn-xs m-r-xs dark-green"
+                                ng-click="medicalInfoModalVm.selectAllMedicalSections(medicalInfofmationModalObj)">
+                            Select All
+                        </button>
+                        <button class="btn btn-primary btn-xs dark-green"
+                                ng-click="medicalInfoModalVm.deselectAllMedicalSections(medicalInfofmationModalObj)">
+                            Deselect All
+                        </button>
                         <div ng-repeat="medicalSection in medicalInfoModalVm.mediactionSections">
                             <div>
                                 <div class="radio">
                                     <label>
-                                        <input type="checkbox" pp-icheck  checklist-model="medicalInfoModalVm.consent.selectedMedicalSections" checklist-value="medicalSection.code" >
+                                        <input type="checkbox" pp-icheck
+                                               checklist-model="medicalInfoModalVm.consent.selectedMedicalSections"
+                                               checklist-value="medicalSection.code">
                                         <span class="m-l-xs" ng-bind="medicalSection.displayName"></span>
                                     </label>
 
@@ -44,23 +52,32 @@
                             Select the medical information that you <strong>DO
                             NOT</strong> wish to share.
                         </div>
-                        <button class="btn btn-primary btn-xs m-r-xs dark-green" ng-click="medicalInfoModalVm.selectAllSensitivityPolicies(medicalInfofmationModalObj)">Select All</button>
-                        <button class="btn btn-primary btn-xs dark-green" ng-click="medicalInfoModalVm.deselectAllSensitivityPolicies(medicalInfofmationModalObj)">Deselect All</button>
+                        <button class="btn btn-primary btn-xs m-r-xs dark-green"
+                                ng-click="medicalInfoModalVm.selectAllSensitivityPolicies(medicalInfofmationModalObj)">
+                            Select All
+                        </button>
+                        <button class="btn btn-primary btn-xs dark-green"
+                                ng-click="medicalInfoModalVm.deselectAllSensitivityPolicies(medicalInfofmationModalObj)">
+                            Deselect All
+                        </button>
                         <div>
                             <div class="border-bottom p-xxs m-t-sm m-b-xs text-dark-blue">
                                 <span class="fa fa-university m-r-xxs"></span>
                                 <em>Federal Categories</em>
                             </div>
-                            <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | filter: { federal: 'true' } | orderBy:'displayOrder'">
-                                <div>
+                            <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
+                                <div ng-if="sensitivityPolicy.federal">
                                     <div class="radio">
                                         <label>
-                                            <input type="checkbox" pp-icheck  checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies" checklist-value="sensitivityPolicy.code" >
+                                            <input type="checkbox" pp-icheck
+                                                   checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies"
+                                                   checklist-value="sensitivityPolicy.code">
                                             <span class="m-l-xs" ng-bind="sensitivityPolicy.displayName"></span>
                                         </label>
                                         <span class="text-strong-blue m-l-xs">
-                                            <span mhc-popover popover-placement="bottom"
-                                                  popoverdata="sensitivityPolicy"></span>
+                                            <mhc-popover popover-placement="bottom"
+                                                         popover-title="sensitivityPolicy.displayName"
+                                                         popover-content="sensitivityPolicy.description"></mhc-popover>
                                         </span>
                                     </div>
                                 </div>
@@ -71,16 +88,19 @@
                                 <span class="fa fa-flag m-r-xxs"></span>
                                 <em>State Categories</em>
                             </div>
-                            <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | filter: { federal: 'false' } | orderBy:'displayOrder'">
-                                <div>
+                            <div ng-repeat="sensitivityPolicy in medicalInfoModalVm.sensitivityPolicies | orderBy:'displayOrder'">
+                                <div ng-if="!sensitivityPolicy.federal">
                                     <div class="radio">
                                         <label>
-                                            <input type="checkbox" pp-icheck  checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies" checklist-value="sensitivityPolicy.code" >
+                                            <input type="checkbox" pp-icheck
+                                                   checklist-model="medicalInfoModalVm.consent.selectedSensitivityPolicies"
+                                                   checklist-value="sensitivityPolicy.code">
                                             <span class="m-l-xs" ng-bind="sensitivityPolicy.displayName"></span>
                                         </label>
                                         <span class="text-strong-blue m-l-xs">
-                                            <span mhc-popover popover-placement="bottom"
-                                                  popoverdata="sensitivityPolicy"></span>
+                                            <mhc-popover popover-placement="bottom"
+                                                         popover-title="sensitivityPolicy.displayName"
+                                                         popover-content="sensitivityPolicy.description"></mhc-popover>
                                         </span>
                                     </div>
                                 </div>
@@ -93,6 +113,8 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white m-r-xs" ng-click="medicalInfoModalVm.cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary dark-green" ng-click="medicalInfoModalVm.ok()" ng-disabled="medicalInfofmationModalObj.$pristine">Save changes</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="medicalInfoModalVm.ok()"
+                ng-disabled="medicalInfofmationModalObj.$pristine">Save changes
+        </button>
     </div>
 </div>
